[gd_scene load_steps=21 format=3 uid="uid://dkp7oly5rxtik"]

[ext_resource type="Texture2D" uid="uid://b2bndmofqaixh" path="res://Pink.png" id="1_re3c0"]
[ext_resource type="Script" path="res://game_scene.gd" id="1_ttffu"]
[ext_resource type="Texture2D" uid="uid://dwwlcijs70f87" path="res://Suika.webp" id="2_f6cmh"]
[ext_resource type="Texture2D" uid="uid://ciuiyurfgybje" path="res://Flying (32x32).png" id="4_0tv70"]
[ext_resource type="Script" path="res://score.gd" id="5_mn8oh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uuy4a"]
atlas = ExtResource("4_0tv70")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_723lo"]
atlas = ExtResource("4_0tv70")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ablgq"]
atlas = ExtResource("4_0tv70")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt268"]
atlas = ExtResource("4_0tv70")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfa0i"]
atlas = ExtResource("4_0tv70")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m51st"]
atlas = ExtResource("4_0tv70")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i57b6"]
atlas = ExtResource("4_0tv70")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2r4c"]
atlas = ExtResource("4_0tv70")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ao5a"]
atlas = ExtResource("4_0tv70")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0y6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuy4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_723lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ablgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt268")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfa0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m51st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2r4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ao5a")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_dkywc"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_7rfrn"]
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_7d3g0"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_hgxgt"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_7fkru"]
font_size = 128
font_color = Color(1, 1, 1, 0.8)
outline_size = 19
outline_color = Color(1, 1, 1, 0.898039)
shadow_size = 0

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("character")]
script = ExtResource("1_ttffu")
character = NodePath("AnimatedSprite2D")

[node name="background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_re3c0")
stretch_mode = 1

[node name="Temp" type="TextureRect" parent="."]
scale = Vector2(1.77322, 1.77322)
texture = ExtResource("2_f6cmh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-143, -58)
scale = Vector2(2.65625, 2.65625)
sprite_frames = SubResource("SpriteFrames_c0y6e")
autoplay = "default"
offset = Vector2(10, 0)

[node name="BoxBody" type="StaticBody2D" parent="."]
position = Vector2(0, -17)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoxBody"]
polygon = PackedVector2Array(362, 156, 362, 622, 792, 622, 792, 156, 778, 156, 778, 610, 376, 610, 376, 156)

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(377, 69)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(777, 69)

[node name="TopMarker" type="Marker2D" parent="."]
position = Vector2(577, 129)

[node name="NextFruitMarker" type="Marker2D" parent="."]
position = Vector2(979, 168)

[node name="Label" type="Label" parent="NextFruitMarker"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -89.0
offset_right = 20.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
text = "Next Fruit "
label_settings = SubResource("LabelSettings_dkywc")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="NextFruitMarker"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ScoreMarker" type="Marker2D" parent="."]
position = Vector2(170, 150)
script = ExtResource("5_mn8oh")

[node name="CurrentScoreNumbers" type="Label" parent="ScoreMarker"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_7rfrn")
horizontal_alignment = 1

[node name="CurrentScoreLabel" type="Label" parent="ScoreMarker"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -125.0
offset_right = 60.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
text = "SCORE"
label_settings = SubResource("LabelSettings_7d3g0")
horizontal_alignment = 1

[node name="BestScoreNumbers" type="Label" parent="ScoreMarker"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 63.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_hgxgt")
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="ScoreMarker"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "BEST SCORE"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScoreMarker"]
offset_right = 40.0
offset_bottom = 40.0

[node name="GameLostLabel" type="Label" parent="."]
visible = false
top_level = true
light_mask = 3
visibility_layer = 3
offset_left = 318.0
offset_top = 159.0
offset_right = 845.0
offset_bottom = 334.0
text = "You Lost"
label_settings = SubResource("LabelSettings_7fkru")
